--- a/MainMaterialApp/MainMaterialApp.csproj
+++ b/MainMaterialApp/MainMaterialApp.csproj
@@ -18,10 +18,9 @@
     <PackageReference Include="MaterialDesignThemes" Version="4.2.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Npgsql" Version="5.0.10" />
-    <PackageReference Include="Syncfusion.SfBusyIndicator.WPF" Version="19.3.0.47" />
+    <PackageReference Include="Syncfusion.Licensing" Version="19.4.0.38" />
     <PackageReference Include="Syncfusion.SfSkinManager.WPF" Version="19.3.0.57" />
-    <PackageReference Include="Syncfusion.Themes.MaterialLight.WPF" Version="19.3.0.57" />
-    <PackageReference Include="Syncfusion.Tools.WPF" Version="19.3.0.57" />
+    <PackageReference Include="Syncfusion.Tools.WPF" Version="19.4.0.38" />
   </ItemGroup>
 
   <ItemGroup>
